WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270469
[WebGPU] getBindGroupLayout should return a non-null possibly-invalid layout
https://bugs.webkit.org/show_bug.cgi?id=270469
Summary
[WebGPU] getBindGroupLayout should return a non-null possibly-invalid layout
Alex Christensen
Reported
2024-03-04 12:02:42 PST
rdar://123810931
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2024-03-04 12:08:14 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25442
EWS
Comment 2
2024-03-04 17:06:27 PST
Committed
275664@main
(561208853674): <
https://commits.webkit.org/275664@main
> Reviewed commits have been landed. Closing PR #25442 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug