[WebGPU] getBindGroupLayout should return a non-null possibly-invalid layout https://bugs.webkit.org/show_bug.cgi?id=270469 rdar://123810931

Reviewed by Mike Wyrzykowski.

* LayoutTests/fast/webgpu/bind-group-layout-invalid-expected.txt: Added.
* LayoutTests/fast/webgpu/bind-group-layout-invalid.html: Added.
* Source/WebGPU/WebGPU/ComputePipeline.h:
* Source/WebGPU/WebGPU/ComputePipeline.mm:
(WebGPU::ComputePipeline::getBindGroupLayout):
* Source/WebGPU/WebGPU/RenderPipeline.h:
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::RenderPipeline::getBindGroupLayout):

Canonical link: https://commits.webkit.org/275664@main