Source/WebGPU/WebGPU/RenderPipeline.h
@@ -64,7 +64,7 @@ public:
 
     ~RenderPipeline();
 
-    RefPtr<BindGroupLayout> getBindGroupLayout(uint32_t groupIndex);
+    Ref<BindGroupLayout> getBindGroupLayout(uint32_t groupIndex);
     void setLabel(String&&);
 
     bool isValid() const { return m_renderPipelineState; }
